Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-4326

Cloned version of Symbian toolchain doesn't configure PATH correctly for make step

XMLWordPrintable

    • 17a5186af43734a56d27c1a9dd2d1c0cb2a721ff

      How to reproduce

      • Start QtCreator in an environment with a Symbian toolchain (for me it's RVCT)
      • Create example App for Symbian, compile it
      • Go to toolchains, Clone toolchain
      • Toolchain settings seem to be exactly the same
      • Close toolchains dialog, re-open it
      • PATH setting for cloned toolchain has changed from 'D:\dev\devtools\crosscompiler\rvct-2.2.686\bin' to 'D:\dev\devtools\crosscompiler\rvct-2.2.686\bin;D:\dev\devtools\crosscompiler\rvct-2.2.686\bin'
      • Select Cloned Toolchain for Project
      • Recompilation fails
      • Adding 'D:\Symbian\s60-sdks\epoc32\tools;D:\Symbian\Raptor\bin;C:\Windows\System32;D:\dev\qt\qt-4.7.3-armv5\bin' to the PATH for the cloned toolchain fixes it for me

      Compilation Output with original toolchain

      Running build steps for project QtQuickAppSymbian...
      Starting: "D:\Symbian\s60-sdks\epoc32\tools\make.exe" clean -w
      D:\Symbian\s60-sdks\epoc32\tools\make.exe: Entering directory `D:/dev/tmp/QtQuickAppSymbian'
      sbs reallyclean --toolcheck=off -c winscw_udeb.mwccinc -c arm.v5.udeb.rvct2_2 -c arm.v6.udeb.rvct2_2 -c arm.v5.urel.rvct2_2 -c arm.v6.urel.rvct2_2
      sbs: warning: missing flag ENABLE_ABIV2_MODE in D:/Symbian/s60-sdks/epoc32/tools/variant/variant.cfg file. ABIV1 builds are not supported.
      sbs: warning: missing flag ENABLE_ABIV2_MODE in D:/Symbian/s60-sdks/epoc32/tools/variant/variant.cfg file. ABIV1 builds are not supported.
      sbs: warning: missing flag ENABLE_ABIV2_MODE in D:/Symbian/s60-sdks/epoc32/tools/variant/variant.cfg file. ABIV1 builds are not supported.
      sbs: warning: missing flag ENABLE_ABIV2_MODE in D:/Symbian/s60-sdks/epoc32/tools/variant/variant.cfg file. ABIV1 builds are not supported.
      sbs: warning: missing flag ENABLE_ABIV2_MODE in D:/Symbian/s60-sdks/epoc32/tools/variant/variant.cfg file. ABIV1 builds are not supported.
          D:/Symbian/s60-sdks/epoc32/tools/makefile_templates/s60/mifconv.flm:104: warning: overriding commands for target `D:/Symbian/s60-sdks/epoc32/data/z/resource/apps/QtQuickAppSymbian.mif'
          D:/Symbian/s60-sdks/epoc32/tools/makefile_templates/s60/mifconv.flm:104: warning: ignoring old commands for target `D:/Symbian/s60-sdks/epoc32/data/z/resource/apps/QtQuickAppSymbian.mif'
          D:/Symbian/s60-sdks/epoc32/tools/makefile_templates/s60/mifconv.flm:104: warning: overriding commands for target `D:/Symbian/s60-sdks/epoc32/data/z/resource/apps/QtQuickAppSymbian.mif'
          D:/Symbian/s60-sdks/epoc32/tools/makefile_templates/s60/mifconv.flm:104: warning: ignoring old commands for target `D:/Symbian/s60-sdks/epoc32/data/z/resource/apps/QtQuickAppSymbian.mif'
          D:/Symbian/s60-sdks/epoc32/tools/makefile_templates/s60/mifconv.flm:104: warning: overriding commands for target `D:/Symbian/s60-sdks/epoc32/data/z/resource/apps/QtQuickAppSymbian.mif'
          D:/Symbian/s60-sdks/epoc32/tools/makefile_templates/s60/mifconv.flm:104: warning: ignoring old commands for target `D:/Symbian/s60-sdks/epoc32/data/z/resource/apps/QtQuickAppSymbian.mif'
      
      sbs : warnings: 11
      sbs : errors: 0
      
      built 'arm.v6.udeb.rvct2_2'
      built 'arm.v5.udeb.rvct2_2'
      built 'arm.v6.urel.rvct2_2'
      built 'winscw_udeb.mwccinc'
      built 'arm.v5.urel.rvct2_2'
      
      Run time 3 seconds
      
      sbs: build log in D:/Symbian/s60-sdks/epoc32/build/Makefile.2011-03-31-17-03-14.log
      D:\Symbian\s60-sdks\epoc32\tools\make.exe: Leaving directory `D:/dev/tmp/QtQuickAppSymbian'
      The process "D:\Symbian\s60-sdks\epoc32\tools\make.exe" exited normally.
      Configuration unchanged, skipping qmake step.
      Starting: "D:\Symbian\s60-sdks\epoc32\tools\make.exe" debug-armv5 -w
      D:\Symbian\s60-sdks\epoc32\tools\make.exe: Entering directory `D:/dev/tmp/QtQuickAppSymbian'
      sbs -c arm.v5.udeb.rvct2_2
      

      Compilation Output with Cloned Toolchain

      Running build steps for project QtQuickAppSymbian...
      Starting: "make.exe" clean -w
      make.exe: Entering directory `D:/dev/tmp/QtQuickAppSymbian'
      sbs reallyclean --toolcheck=off -c winscw_udeb.mwccinc -c arm.v5.udeb.rvct2_2 -c arm.v6.udeb.rvct2_2 -c arm.v5.urel.rvct2_2 -c arm.v6.urel.rvct2_2
      make.exe: Leaving directory `D:/dev/tmp/QtQuickAppSymbian'
      process_begin: CreateProcess((null), sbs reallyclean --toolcheck=off -c winscw_udeb.mwccinc -c arm.v5.udeb.rvct2_2 -c arm.v6.udeb.rvct2_2 -c arm.v5.urel.rvct2_2 -c arm.v6.urel.rvct2_2, ...) failed.
      make (e=2): The system cannot find the file specified.
      make.exe: [clean] Error 2 (ignored)
      The process "make.exe" exited normally.
      Configuration unchanged, skipping qmake step.
      Starting: "make.exe" debug-armv5 -w
      make.exe: Entering directory `D:/dev/tmp/QtQuickAppSymbian'
      sbs -c arm.v5.udeb.rvct2_2
      make.exe: Leaving directory `D:/dev/tmp/QtQuickAppSymbian'
      process_begin: CreateProcess((null), sbs -c arm.v5.udeb.rvct2_2, ...) failed.
      make (e=2): The system cannot find the file specified.
      make.exe: *** [debug-armv5] Error 2
      The process "make.exe" exited with code 2.
      Error while building project QtQuickAppSymbian (target: Symbian Device)
      When executing build step 'Make'
      

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            hunger Tobias Hunger
            kkohne Kai Köhne
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes