Symbian: Make cloning of RVCT toolchain work

Make sure to not show PATH and other generated environment variables
in the base environment (which ends up in the configuration widget).
The generated changes will find their way into the set up changes
otherwise when accepting any change to the RVCT toolchain where they
will override other changes.

Task-number: QTCREATORBUG-4326
Reviewed-by: dt